--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.4.7"
     }
 }
