--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.0",
+        "jquery.numeric": "^1.0.0",
         "sweetalert": "^2.1.2",
         "sweetalert2": "^11.4.7"
     }
