--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
